<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p0"
        android:id="@+id/p0"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="41dp" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek0"
        android:layout_below="@+id/p0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p1"
        android:id="@+id/p1"
        android:layout_alignRight="@+id/p0"
        android:layout_alignEnd="@+id/p0"
        android:layout_below="@+id/seek0"
        android:layout_alignLeft="@+id/p0"
        android:layout_alignStart="@+id/p0" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p1"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p2"
        android:id="@+id/p2"
        android:layout_alignRight="@+id/p1"
        android:layout_alignEnd="@+id/p1"
        android:layout_below="@+id/seek1"
        android:layout_alignLeft="@+id/p1"
        android:layout_alignStart="@+id/p1" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p3"
        android:id="@+id/p3"
        android:layout_alignRight="@+id/p2"
        android:layout_alignEnd="@+id/p2"
        android:layout_below="@+id/seek2"
        android:layout_alignLeft="@+id/p2"
        android:layout_alignStart="@+id/p2" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p3"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p4"
        android:id="@+id/p4"
        android:layout_alignRight="@+id/p3"
        android:layout_alignEnd="@+id/p3"
        android:layout_below="@+id/seek3"
        android:layout_alignLeft="@+id/p3"
        android:layout_alignStart="@+id/p3" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek4"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p4"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p5"
        android:id="@+id/p5"
        android:layout_alignRight="@+id/p4"
        android:layout_alignEnd="@+id/p4"
        android:layout_below="@+id/seek4"
        android:layout_alignLeft="@+id/p4"
        android:layout_alignStart="@+id/p4" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek5"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p5"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p6"
        android:id="@+id/p6"
        android:layout_alignRight="@+id/p5"
        android:layout_alignEnd="@+id/p5"
        android:layout_below="@+id/seek5"
        android:layout_alignLeft="@+id/p5"
        android:layout_alignStart="@+id/p5" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek6"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p6"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p7"
        android:id="@+id/p7"
        android:layout_alignRight="@+id/p6"
        android:layout_alignEnd="@+id/p6"
        android:layout_below="@+id/seek6"
        android:layout_alignLeft="@+id/p6"
        android:layout_alignStart="@+id/p6" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek7"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p7"
        android:layout_alignParentLeft="true" />

</RelativeLayout>